Rename treatment column in drug response experiment data

--- a/jnb_dataProcessing.ipynb
+++ b/jnb_dataProcessing.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "init_cell": true
    },
@@ -77,6 +77,7 @@
     "collectionFrequency = 3\n",
     "dataDf_DRAssay = pd.read_csv(os.path.join(dataDir,\"continuousTreatmentDf_raw.csv\"),index_col=0)\n",
     "dataDf_DRAssay = dataDf_DRAssay[dataDf_DRAssay.CollectionFrequency==collectionFrequency]\n",
+    "dataDf_DRAssay.rename(columns={\"DrugDose\":\"DrugConcentration\"},inplace=True)\n",
     "dataDf_DRAssay['Time'] /= 24 # Convert from hours to days\n",
     "\n",
     "# Remove high density data for TOV112d, as cells detached from the plate and gave erroneous readings\n",
