First draft of fig 6 in which we profile different AT strategies and show preliminary data from our in vivo experiments.

--- a/jnb_figure5.ipynb
+++ b/jnb_figure5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 138,
    "metadata": {
     "init_cell": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 139,
    "metadata": {
     "init_cell": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 140,
    "metadata": {
     "init_cell": true
    },
@@ -115,14 +115,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## b) Map out empirical dose-effect relationship"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### \"Measure\" dose-effect curve by fitting to each dose level keeping all parameters but $\\alpha$ fixed"
    ]
@@ -130,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -234,7 +241,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Plot fits to check this worked correctly"
    ]
@@ -242,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -292,7 +304,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Analyse inferred parameters to extract dose-response relationship"
@@ -436,7 +449,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Compute dose-response relationship predicted by the linear model (Models 4) and the non-linear Model (Model 5)"
@@ -492,7 +506,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Plot observed relationship between the drug effect ($\\alpha D$) and dose"
