--- a/jnb_figure5.ipynb
+++ b/jnb_figure5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "init_cell": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "init_cell": true
    },
@@ -91,11 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {
     "init_cell": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/69/cx1jxdf9171bhc7x5sbjn0xh0000gn/T/ipykernel_74860/1155672590.py:17: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  drDataDf_avg = drDataDf_full.groupby(by=[\"Time\",\"DrugConcentration\"]).mean()\n"
+     ]
+    }
+   ],
    "source": [
     "# Load data for 0-50uM\n",
     "dataDf_DRAssay = pd.read_csv(\"./data/continuousTreatmentDf_cleaned.csv\", index_col=0)\n",
@@ -555,19 +564,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## d) Fit a model with a non-linear dose-response relationship (Model 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "modelName = \"CycleArrestModel_singleStep_extraDivs_dr\"\n",
@@ -583,8 +588,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Carry out fitting"
@@ -665,8 +669,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Estimate uncertainty in parameter estimates and model predictions by parametric bootstrapping"
@@ -705,10 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Plot the fits"
    ]
@@ -716,9 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -755,9 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -798,6 +794,30 @@
     "    ax.set_xlabel(\"\")\n",
     "    ax.set_ylabel(\"\")\n",
     "    plt.savefig(\"./figures/fits_model5_%s.pdf\"%cellLine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "10\n",
+      "10\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the number of independent data points for each parameter set\n",
+    "dosesToPlotList = [0, 10, 50, 100]\n",
+    "for i,dose in enumerate(dosesToPlotList):\n",
+    "    tmpDf = drDataDf_avg[drDataDf_avg.DrugConcentration==dose].copy()\n",
+    "    print(tmpDf.shape[0])"
    ]
   },
   {
@@ -1288,9 +1308,9 @@
  "metadata": {
   "celltoolbar": "Initialization Cell",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10",
    "language": "python",
-   "name": "python3"
+   "name": "py3.10"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1302,7 +1322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.8"
   },
   "varInspector": {
    "cols": {
